Adicionando referencia de Domain em Data

--- a/src/Api.Data/Data.csproj
+++ b/src/Api.Data/Data.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Api.Domain\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
