--- a/src/Api.CrossCutting/CrossCutting.csproj
+++ b/src/Api.CrossCutting/CrossCutting.csproj
@@ -6,6 +6,10 @@
     <ProjectReference Include="..\Api.Data\Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
