--- a/src/Api.Application/appsettings.json
+++ b/src/Api.Application/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=.\\SQLEXPRESS2020;Database=APIDatabase;Uid=sa;Pwd=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
