--- a/src/Api.Application/appsettings.json
+++ b/src/Api.Application/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "TokenConfigurations": {
+    "Audience": "ExemploAudience",
+    "Issuer": "ExemploIssuer",
+    "Seconds": 120
+  },
   "ConnectionStrings": {
     "Default": "Server=.\\SQLEXPRESS2020;Database=APIDatabase;Uid=sa;Pwd=root"
   },
